<resources>
    <string name="app_name">space-Tubes Pemograman Mobile</string>
<<<<<<< lia
    <string name="logo_description">Logo</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="to_do_list">To-Do List</string>
    <string name="add_button">Add Item</string>
    <string name="arrow_button">Arrow Up</string>
    <string name="add_note">Add Note</string>
    <string name="note_title">Judul Catatan</string>
    <string name="note_summary">Ringkasan singkat catatan</string>
    <string name="checkBox">checkbox</string>
    <string name="taskName">task Name</string>
    <string name="dueDat">deadline</string>
    <string name="search_hint">Cari sesuatu...</string>
    <string name="on_going">Sedang Berlangsung</string>
    <string name="completed">Sudah Selesai</string>
=======
    <string name="logo_description">logo</string>
    <string name="icon_profil">profil icon</string>
    <string name="to_do_list">To-do List</string>
    <string name="calendar">Calendar</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="notes">Notes</string>
    <string name="background_change">Background Change</string>
    <string name="focus_timer">Focus Timer</string>
    <string name="short_break_timer">Short Break Timer</string>
    <string name="long_break_timer">Long Break Timer</string>
    <string name="start_focus">Start Focus</string>
    <string name="start_short_break">Start Short Break</string>
    <string name="start_long_break">Start Long Break</string>
>>>>>>> master
</resources>