<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme2_bg">

    <!-- Header Include -->
    <include
        android:id="@+id/includeHeader"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Search Bar -->
    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeHeader">

        <ImageView
            android:id="@+id/iconSearch"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search"
            app:tint="@color/header" />

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/white"
            android:textColorHint="#838282"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- RecyclerView Section -->
    <TextView
        android:id="@+id/ongoingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/on_going"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ongoingRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ongoingTitle"
        tools:listitem="@layout/item_todo" />

    <TextView
        android:id="@+id/completedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/completed"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ongoingRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/completedRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completedTitle"
        tools:listitem="@layout/item_todo" />


</androidx.constraintlayout.widget.ConstraintLayout>
