<?xml version="1.0" encoding="utf-8"?>
<<<<<<< lia
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
=======
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
>>>>>>> master
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background untuk header -->
    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
<<<<<<< lia
        android:background="@color/header"
=======
        android:background="#232931"
>>>>>>> master
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Guideline untuk membatasi jarak antar elemen -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
<<<<<<< lia
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.13" /> <!-- Setengah lebar layar untuk judul -->
=======
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5" /> <!-- Setengah lebar layar untuk judul -->
>>>>>>> master

    <!-- Logo di kiri -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
<<<<<<< lia
        android:src="@drawable/ic_logo"
=======
        android:src="@drawable/logo"
>>>>>>> master
        android:contentDescription="@string/logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"/>

    <!-- Judul di tengah -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="naa's space"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/profileIcon"
        app:layout_constraintGuide_begin="@id/guideline"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@id/logoImage"
<<<<<<< lia
        app:layout_constraintTop_toTopOf="parent" />
=======
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />
>>>>>>> master


    <!-- Ikon Profil di kanan -->

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
<<<<<<< lia
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile_icon"
=======
        android:src="@drawable/profile"
        android:contentDescription="@string/icon_profil"
>>>>>>> master
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>