<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todo_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme2_bg">

    <include
        android:id="@+id/includeHeader"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Search Bar Container -->

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeHeader">



        <!-- Icon Search -->
        <ImageView
            android:id="@+id/iconSearch"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search"
            app:tint="@color/header" />

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="Cari sesuatu..."
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/white"
            android:textColorHint="#838282"
            android:textSize="16sp" />

        <!-- Input Field -->
    </LinearLayout>


    <!-- Title: Sedang Berlangsung -->
    <TextView
        android:id="@+id/tvOngoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sedang Berlangsung"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <!-- Ongoing Tasks -->
    <LinearLayout
        android:id="@+id/ongoingTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvOngoing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Task Item -->
        <LinearLayout
            android:id="@+id/task1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/task_bg"
            android:layout_margin="7dp">

            <CheckBox
                android:id="@+id/checkboxTask1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gray"/>

            <TextView
                android:id="@+id/taskName1"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Tugas Praktikum Mobile"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/taskDeadline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10.10"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"/>
        </LinearLayout>
        <!-- Task Item 2 -->
        <LinearLayout
            android:id="@+id/task2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/task_bg"
            android:layout_margin="7dp">

            <CheckBox
                android:id="@+id/checkboxTask2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gray"/>

            <TextView
                android:id="@+id/taskName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Tugas Desain Interaksi"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/taskDeadline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15.10"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"/>
        </LinearLayout>

    </LinearLayout>



    <!-- Title: Sudah Selesai -->
    <TextView
        android:id="@+id/tvCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sudah Selesai"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ongoingTasks"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <!-- Completed Tasks -->
    <LinearLayout
        android:id="@+id/completedTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvCompleted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Task Item -->
        <LinearLayout
            android:id="@+id/completedTask1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/task_bg"
            android:layout_margin="7dp">

            <CheckBox
                android:id="@+id/checkboxCompletedTask1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:id="@+id/completedTaskName1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="Tugas Selesai"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/completedTaskDeadline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10.12"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical|end"/>
        </LinearLayout>
    </LinearLayout>
    <!-- Floating Buttons -->

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/add_btn_bg"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnArrow"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/btn_background"
        android:contentDescription="@string/arrow_button"
        android:scaleType="center"
        android:layout_gravity="center"
        android:src="@drawable/arrow_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>